<resources>
    <string name="app_name">Delish</string>
    <string name="go_to_log_new_meal">Go To Log New Meal</string>
    <string name="go_to_create_new_food">Go TO Create New Food</string>
    <string name="enter_number_of_foods_to_log">Enter number of foods to log.</string>
    <string name="go">Go</string>
    <string name="enter_food_item_1">Enter food item 1</string>
    <string name="enter_food_item_2">Enter food item 2</string>
    <string name="enter_food_item_3">Enter food item 3</string>
    <string name="enter_food_item_4">Enter food item 4</string>
    <string name="enter_food_item_5">Enter food item 5</string>
    <string name="submit">Submit</string>
    <string name="enter_ingredient_1">Enter ingredient 1</string>
    <string name="enter_ingredient_2">Enter ingredient 2</string>
    <string name="enter_ingredient_3">Enter ingredient 3</string>
    <string name="enter_ingredient_4">Enter ingredient 4</string>
    <string name="enter_number_of_ingredients">Enter number of ingredients.</string>
    <string name="enter_food_name">Enter food name</string>
    <string name="enter_number_of_servings">Enter number of servings</string>
    <string name="enter_ingredient_to_change">Enter ingredient to change.</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
</resources>