<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_create_new_food">

    <EditText
        android:id="@+id/get_food_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_food_name"
        android:inputType="text"/>

    <EditText
        android:id="@+id/get_num_servings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_number_of_servings"
        android:inputType="text"/>

    <EditText
        android:id="@+id/get_num_ingredients"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_number_of_ingredients"
        android:inputType="text"/>

    <Button
        android:id="@+id/get_num_ingredients_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go"
        android:onClick="setNumIngredients"/>

    <EditText
        android:id="@+id/ingredient_input_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_ingredient_1"
        android:inputType="text"/>

    <EditText
        android:id="@+id/ingredient_input_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_ingredient_2"
        android:inputType="text"/>

    <EditText
        android:id="@+id/ingredient_input_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_ingredient_3"
        android:inputType="text"/>

    <EditText
        android:id="@+id/ingredient_input_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_ingredient_4"
        android:inputType="text"/>

    <EditText
        android:id="@+id/ingredient_input_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_ingredient_1"
        android:inputType="text"/>

    <Button
        android:id="@+id/submit_food_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:onClick="submitFood"/>

</LinearLayout>