<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_log_new_meal">

    <Button
        android:id="@+id/go_to_create_new_food"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_to_create_new_food"
        android:onClick="toCreateNewFood"/>

    <EditText
        android:id="@+id/get_num_foods"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_number_of_foods_to_log"
        android:inputType="text"/>

    <Button
        android:id="@+id/get_num_foods_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go"
        android:onClick="setNumFoods"/>

    <Button
        android:id="@+id/submit_meal_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="submitMeal"
        android:text="@string/submit"/>

    <Button
        android:id="@+id/return_to_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Return Home"
        android:onClick="toLogNewMeal"/>


</LinearLayout>